force-app/main/default/objects/Apttus__Wizard__c/Apttus__Wizard__c.object-meta.xml
<CustomObject>
    <description>Main Wizard Object, each record represents a Wizard design</description>
    <label>Wizard Design (Deprecated)</label>
    <nameField>
        <label>Wizard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>