force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that the Wizard Design is Active. Once activated, the wizard cannot be modified.</description>
    <inlineHelpText>Signifies that the Wizard Design is Active. Once activated, the wizard cannot be modified.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>