force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__BannerStatement__c.field-meta.xml
<CustomField>
    <fullName>Apttus__BannerStatement__c</fullName>
    <description>Defaults to Wizard Design label and is used by the Wizard Runtime as the banner.</description>
    <inlineHelpText>Defaults to Wizard Design label and is used by the Wizard Runtime as the banner.</inlineHelpText>
    <label>Banner Statement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>