force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__Category__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Category__c</fullName>
    <description>Controlling the subcategory field, whose list values shall allow users to search, find, and select Wizards</description>
    <inlineHelpText>Controlling the subcategory field, whose list values shall allow users to search, find, and select Wizards</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>