force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__EditorView__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EditorView__c</fullName>
    <label>Editor View</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Step Sequence List</fullName>
            </value>
            <value>
                <fullName>Step Name</fullName>
            </value>
            <value>
                <fullName>Input Name</fullName>
            </value>
            <value>
                <fullName>Input Q / S</fullName>
            </value>
            <value>
                <fullName>Input Response</fullName>
            </value>
            <value>
                <fullName>Q / S &amp; Response</fullName>
            </value>
            <value>
                <fullName>Rule Editors</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>