force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__Label__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Label__c</fullName>
    <description>The label to be used for the wizard.</description>
    <inlineHelpText>The label to be used for the wizard.</inlineHelpText>
    <label>Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>