force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__LandingPage__c.field-meta.xml
<CustomField>
    <fullName>Apttus__LandingPage__c</fullName>
    <description>The page that the Wizard should drop off at when all questions are completed. Default will be the record.</description>
    <inlineHelpText>The page that the Wizard should drop off at when all questions are completed. Default will be the record.</inlineHelpText>
    <label>Landing Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>