force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__Language__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Language__c</fullName>
    <description>The language the runtime user speaks.</description>
    <inlineHelpText>The language the runtime user speaks.</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Chinese (Traditional)</fullName>
            </value>
            <value>
                <fullName>Chinese (Simplified)</fullName>
            </value>
            <value>
                <fullName>Portuguese (Brazilian)</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>