force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__Locale__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Locale__c</fullName>
    <description>APTTUS RESERVED. CUSTOMERS SHOULD NOT CHANGE VALUES</description>
    <inlineHelpText>The locale the wizard runtime user will be in.</inlineHelpText>
    <label>Locale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English (United States)</fullName>
                <default>true</default>
                <label>English (United States)</label>
            </value>
            <value>
                <fullName>English (United Kingdom)</fullName>
            </value>
            <value>
                <fullName>English (Canada)</fullName>
            </value>
            <value>
                <fullName>English (Ireland)</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Norwegian</fullName>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Greek (Greece)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>