force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__OwnerEditsOnly__c.field-meta.xml
<CustomField>
    <fullName>Apttus__OwnerEditsOnly__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls if everyone or just the owner can edit a wizard design that is not yet activated.</description>
    <inlineHelpText>Controls if everyone or just the owner can edit a wizard design that is not yet activated.</inlineHelpText>
    <label>Owner Edits Only</label>
    <type>Checkbox</type>
</CustomField>