force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__RecordType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RecordType__c</fullName>
    <description>Correlates to the Recordtype</description>
    <inlineHelpText>Correlates to the Recordtype</inlineHelpText>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>