force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__Runtime__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Runtime__c</fullName>
    <description>This launches a Wizard runtime instance.</description>
    <formula>HYPERLINK(&quot;/apex/Apttus__Wizard?wizardid=&quot; &amp;Id,&quot;Wizard&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This launches a Wizard runtime instance.</inlineHelpText>
    <label>Runtime</label>
    <type>Text</type>
</CustomField>