force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__RuntimeDescription__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RuntimeDescription__c</fullName>
    <description>Describe what the runtime user can see as a help or instruction description for this wizard design.</description>
    <inlineHelpText>Describe what the runtime user can see as a help or instruction description for this wizard design.</inlineHelpText>
    <label>Runtime Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>