force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__RuntimePreviewOptional__c.field-meta.xml
<CustomField>
    <fullName>Apttus__RuntimePreviewOptional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Runtime Preview Optional</label>
    <type>Checkbox</type>
</CustomField>