force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__Subtype__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Subtype__c</fullName>
    <description>This is a subtype of the recordtype.</description>
    <inlineHelpText>This is a subtype of the recordtype.</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>