force-app/main/default/objects/Apttus__Wizard__c/fields/Apttus__WizardStepStartId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardStepStartId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first step of the wizard design used in all runtime instances</description>
    <inlineHelpText>The first step of the wizard design used in all runtime instances</inlineHelpText>
    <label>Wizard Start Step</label>
    <referenceTo>Apttus__WizardStep__c</referenceTo>
    <relationshipName>Wizards1</relationshipName>
    <type>Lookup</type>
</CustomField>