force-app/main/default/objects/Apttus__Wizard__c/listViews/Apttus__All.listView-meta.xml
<ListView>
    <fullName>Apttus__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus__Active__c</columns>
    <columns>Apttus__Category__c</columns>
    <columns>Apttus__Description__c</columns>
    <columns>Apttus__Keywords__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Apttus__Runtime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>